--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.NetworkExercise2"
         tools:targetApi="31">
         <activity
-            android:name=".boring.BoringAppScreen"
+            android:name=".boring.ui.BoringAppScreen"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
